--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/carrousel1.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel1.jpg" class="d-block w-100 imgCarrousel" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Fuerza</h5>
               <p></p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel2.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel2.jpg" class="d-block w-100 imgCarrousel" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Técnica</h5>
               <p></p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel3.jpg" class="d-block w-100" alt="...">
+            <img src="./img/carrousel3.jpg" class="d-block w-100 imgCarrousel" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Disciplina</h5>
-              <p>.</p>
+              <p></p>
             </div>
           </div>
         </div>
