--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Gimnasio especializado en el entrenamiento de fuerza, planes personalizados. Ubicado en Tigre.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilo.css">
@@ -42,24 +43,18 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/carrousel1.jpg" class="d-block w-100 imgCarrousel" alt="...">
+            <img src="./img/carrousel1.jpg" class="d-block w-100 imgCarrousel" alt="Hombre en plancha alta">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Fuerza</h5>
-              <p></p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel2.jpg" class="d-block w-100 imgCarrousel" alt="...">
+            <img src="./img/carrousel2.jpg" class="d-block w-100 imgCarrousel" alt="mujer realizando un ejercicio con sogas">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Técnica</h5>
-              <p></p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/carrousel3.jpg" class="d-block w-100 imgCarrousel" alt="...">
+            <img src="./img/carrousel3.jpg" class="d-block w-100 imgCarrousel" alt="hombre en extensión frontal con barra">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Disciplina</h5>
-              <p></p>
             </div>
           </div>
         </div>
@@ -83,9 +78,9 @@
         </p>
       </div>
       <div class="redes">
-          <img class="icon" src="./img/instagram.png" alt="">
-          <img class="icon" src="./img/youtubeicon.png" alt="">
-          <img class="icon" src="./img/twitter-icon.png" alt="">
+        <img class="icon" src="../img/instagram.png" alt="icono de instagram color negro">
+        <img class="icon" src="../img/youtubeicon.png" alt="icono de youtube color negro">
+        <img class="icon" src="../img/twitter-icon.png" alt="icono de twitter color negro">
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
