--- a/section/Servicios.html
+++ b/section/Servicios.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te brindamos entrenamientos 100% personalizados.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <title>Estación de fuerza</title>
+    <title>Servicios</title>
 </head>
 <body class="grid-container-serv">
     <header class="header">
@@ -32,15 +33,15 @@
 
     <main class="main">
       <div class="contenido-servicios">
-        <div><img src="../img/squat.jpg" class="img-fluid img-serv imgServ1" alt="..."></div>
+        <div><img src="../img/squat.jpg" class="img-fluid img-serv imgServ1" alt="mujer realizando un backsquat en el gimnasio"></div>
         <p class="p1">Entrenamos la Fuerza para que la vida sea mas liviana.
           La fuerza mejora tu densidad osea. Mejora tus otras capacidades.
         </p>
-        <div><img src="../img/salida.jpg" class="img-fluid img-serv imgServ2" alt="..."></div>
+        <div><img src="../img/salida.jpg" class="img-fluid img-serv imgServ2" alt="hombre en posición de salida de un snatch"></div>
         <p class="p2">Primero la técnica después los kilos. Es lo que creemos y
           lo que hacemos. La calidad de tu movimiento es lo que vamos a buscar.
         </p>
-        <div><img src="../img/magnesium.jpg" class="img-fluid img-serv imgServ3" alt="..."></div>
+        <div><img src="../img/magnesium.jpg" class="img-fluid img-serv imgServ3" alt="imagen de manos poniendose magnesio con fondo negro"></div>
         <p class="p3"> Disciplina, esa es tu parte. 
           Nosotros te acompañamos a encontrar tu mejor versión. </p>
       </div>
@@ -52,9 +53,9 @@
         </p>
       </div>
       <div class="redes">
-        <img class="icon" src="../img/instagram.png" alt="">
-        <img class="icon" src="../img/youtubeicon.png" alt="">
-        <img class="icon" src="../img/twitter-icon.png" alt="">
+        <img class="icon" src="../img/instagram.png" alt="icono de instagram color negro">
+        <img class="icon" src="../img/youtubeicon.png" alt="icono de youtube color negro">
+        <img class="icon" src="../img/twitter-icon.png" alt="icono de twitter color negro">
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
