--- a/section/clases.html
+++ b/section/clases.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Te proponemos clases presenciales, online o planes a distancia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <title>Estación de fuerza</title>
+    <title>Clases</title>
 </head>
 <body class="grid-container-clases">
     <header class="header">
@@ -32,11 +33,11 @@
 
     <main class="main">
       <div class="contenido-clases">
-        <div><img src="../img/clases1.jpg" class="img-fluid img-clases img1" alt="..."></div>
+        <div><img src="../img/clases1.jpg" class="img-fluid img-clases img1" alt="hombre realizando un overhead squat en un gimnasio"></div>
         <h2 class="h2">En el Box</h2>
-        <div><img src="../img/clases3.jpg" class="img-fluid img-clases img2" alt="..."></div>
+        <div><img src="../img/clases3.jpg" class="img-fluid img-clases img2" alt="Mujer filmandose con un celular mientras entrena en su casa"></div>
         <h2 class="h3">Online</h3>
-        <div><img src="../img/clases2.jpg" class="img-fluid img-clases img3" alt="..."></div>
+        <div><img src="../img/clases2.jpg" class="img-fluid img-clases img3" alt="Mujer de espaldas elongando cuadriceps, mirando el rio"></div>
         <h2 class="h4">Planes a distancia</h4>
       </div>
     </main>
@@ -47,9 +48,9 @@
         </p>
       </div>
       <div class="redes">
-          <img class="icon" src="../img/instagram.png" alt="">
-          <img class="icon" src="../img/youtubeicon.png" alt="">
-          <img class="icon" src="../img/twitter-icon.png" alt="">
+        <img class="icon" src="../img/instagram.png" alt="icono de instagram color negro">
+        <img class="icon" src="../img/youtubeicon.png" alt="icono de youtube color negro">
+        <img class="icon" src="../img/twitter-icon.png" alt="icono de twitter color negro">
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
