--- a/section/contacto.html
+++ b/section/contacto.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactate para entrenar con nosotros">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css">
-    <title>Estación de fuerza</title>
+    <title>Contacto</title>
 </head>
 <body class="grid-container-form">
     <header class="header">
@@ -63,9 +64,9 @@
         </p>
       </div>
       <div class="redes">
-        <img class="icon" src="../img/instagram.png" alt="">
-        <img class="icon" src="../img/youtubeicon.png" alt="">
-        <img class="icon" src="../img/twitter-icon.png" alt="">
+        <img class="icon" src="../img/instagram.png" alt="icono de instagram color negro">
+        <img class="icon" src="../img/youtubeicon.png" alt="icono de youtube color negro">
+        <img class="icon" src="../img/twitter-icon.png" alt="icono de twitter color negro">
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
