modificación texto en quienes somos

--- a/section/quienes.html
+++ b/section/quienes.html
@@ -39,7 +39,7 @@
           <h2>"La diferencia entre lo imposible y lo posible depende de la voluntad de un hombre"
           </h2>
           <p>
-            Somos un grupo de profesionales
+            Somos un grupo de profesionales trabajando desde 2011 en tu salud.
           </p>
         </div>
     </main>
