Cambio de imagen de portada, agregue meta kw

--- a/section/clases.html
+++ b/section/clases.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Te proponemos clases presenciales, online o planes a distancia">
+    <meta name="keywords" content="clases online, planes de entrenamiento, rutinas, ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css">
@@ -36,9 +37,9 @@
         <div><img src="../img/clases1.jpg" class="img-fluid img-clases img1" alt="hombre realizando un overhead squat en un gimnasio"></div>
         <h2 class="h2">En el Box</h2>
         <div><img src="../img/clases3.jpg" class="img-fluid img-clases img2" alt="Mujer filmandose con un celular mientras entrena en su casa"></div>
-        <h2 class="h3">Online</h3>
+        <h2 class="h3">Online</h2>
         <div><img src="../img/clases2.jpg" class="img-fluid img-clases img3" alt="Mujer de espaldas elongando cuadriceps, mirando el rio"></div>
-        <h2 class="h4">Planes a distancia</h4>
+        <h2 class="h4">Planes a distancia</h2>
       </div>
     </main>
     <footer class="footer">
