--- a/section/quienes.html
+++ b/section/quienes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Somos profesionales actualizados en entrenamiento">
+    <meta name="keywords" content="ejercicio, profesores, educación física, deporte">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilo.css">
@@ -35,10 +36,10 @@
       <div class="contenido-quienes">
         <div><img src="../img/yuri.jpg" class="img-fluid img-quienes" alt="...">
         </div>
-        <div>
+        <div class="textoQuienes">
           <h2>"La diferencia entre lo imposible y lo posible depende de la voluntad de un hombre"
           </h2>
-          <p>
+          <p class="parrafoQuienes">
             Somos un grupo de profesionales trabajando desde 2011 en tu salud.
           </p>
         </div>
